add for variable

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <input type="text" id="title" />
         </div>
         <div>
-          <label for="title">Author</label>
+          <label for="author">Author</label>
           <input type="text" id="author" />
         </div>
         <div>
-          <label for="title">ISBN#</label>
+          <label for="isbn">ISBN#</label>
           <input type="text" id="isbn" />
         </div>
 
